220711 budget solo falta grafico

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ capturas/
 __pycache__/
 *.code-workspace
 pokemon_battle_system_yt-master/
+settings.json
 
 # Compiled source #
 ###################
